# deepview

./: .gitignore  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE  Makefile  README.md  junit.xml  mypy.ini  pyproject.toml  pytest.ini
.github/workflows/: docs.yml  main.yml  publish.yml  publishpypi.yml  tests.yml
docs/: Makefile  conf.py  index.rst  requirements.txt
docs/api/: index.rst
docs/api/canvas/: index.rst
docs/api/datasets/: index.rst
docs/api/deepview/: base.rst  index.rst  introspectors.rst  processors.rst
docs/api/dnikit/: base.rst  exceptions.rst  typing.rst
docs/api/tensorflow/: index.rst
docs/api/torch/: index.rst
docs/canvas/: api.rst  common.rst  components.rst  conf.py  contributing.rst  creation.rst  examples.rst  genindex.rst  index.rst  start.rst  state.csv  state.rst  widgets.csv
docs/canvas/_static/: theme_overrides.css
docs/dev/: contributing.rst
docs/general/: installation.rst  support.rst
docs/how_to/: connect_data.rst  connect_model.rst  deepview_concepts.rst  dnikit_concepts.rst  introspect.rst
docs/introspectors/: data_introspection.rst
docs/introspectors/data_introspection/: dataset_report.rst  dimension_reduction.rst  duplicates.rst  familiarity.rst
docs/introspectors/model_introspection/: inactive_units.rst  network_compression.rst
docs/notebooks/data_introspection/: dataset_report.ipynb  dimension_reduction.ipynb  duplicates.ipynb  familiarity_for_dataset_distribution.ipynb  familiarity_for_rare_data_discovery.ipynb
docs/notebooks/model_introspection/: inactive_unit_analysis.ipynb  principal_filter_analysis.ipynb
docs/reference/: changelog.rst  how_to_cite.rst
docs/utils/: data_producers.rst  pipeline_stages.rst
examples/: simple_cnn.py
notebooks/.verify/: dataset_report.py  dimension_reduction.py  duplicates.py  familiarity_for_dataset_distribution.py  familiarity_for_rare_data_discovery.py  inactive_unit_analysis.py  principal_filter_analysis.py  symphony-cifar-example.py
notebooks/data_introspection/: canvas-cifar-example.ipynb  dataset_report.ipynb  dimension_reduction.ipynb  duplicates.ipynb  eda_cifar.ipynb  eda_custom_datasets.ipynb  familiarity_for_dataset_distribution.ipynb  familiarity_for_rare_data_discovery.ipynb
notebooks/model_introspection/: inactive_unit_analysis.ipynb  principal_filter_analysis.ipynb
scripts/: dev-install-notebook.sh  dev-install-widgets.sh  dev-install.sh  dev-uninstall.sh  dev-watch-widgets.sh  publish-packages.sh  update_license_headers.py
src/deepview/: README.md  __init__.py  pyproject.toml  visualizer.py
src/deepview/deepview/: __init__.py  _availability.py  _dict_utils.py  _logging.py
src/deepview/deepview/base/: __init__.py  _cached_producer.py  _image_producer.py  _introspector.py  _model.py  _multi_introspect.py  _pipeline.py  _producer.py  _response_info.py  _traintest_producer.py
src/deepview/deepview/base/_batch/: _batch.py  _fields.py  _metadata_storage.py  _storage.py
src/deepview/deepview/exceptions/: __init__.py  _deepview_exceptions.py
src/deepview/deepview/introspectors/: __init__.py  _duplicates.py
src/deepview/deepview/introspectors/_dim_reduction/: _dimension_reduction.py  _protocols.py  _reducers.py
src/deepview/deepview/introspectors/_familiarity/: __init__.py  _familiarity.py  _gaussian_familiarity.py  _gmm_familiarity.py  _protocols.py
src/deepview/deepview/introspectors/_iua/: _iua.py
src/deepview/deepview/introspectors/_pfa/: _covariances_calculator.py  _pfa.py  _pfa_algorithms.py  _pfa_units.py  _recommendation.py
src/deepview/deepview/introspectors/_report/: __init__.py  _dataframe_formatting.py  _dataset_report.py  _dataset_report_stages.py  _familiarity_wrappers.py  _report_builder_introspectors.py  _string_util.py
src/deepview/deepview/processors/: __init__.py  _base_processor.py  _image_processors.py  _metadata_processors.py  _processors.py
src/deepview/deepview/samples/: __init__.py  _stub_datasets.py  _stub_producer.py
src/deepview/deepview/typing/: __init__.py  _deepview_types.py  _types.py
src/deepview/tests/: conftest.py  test_batch.py  test_batch_storage_ops.py  test_cached_producer.py  test_covariances.py  test_dataset_report.py  test_deepview_responses.py  test_deepview_stub_datasets.py  test_dict_utils.py  test_dimension_reduction.py  test_dni_model.py  test_duplicates.py  test_duplicates_config.py  test_familiarity.py  test_image_processors.py  test_image_producer.py  test_iua.py  test_metadata.py  test_metadata_processors.py  test_multi_introspect.py  test_multivar_gaussian.py  test_pfa.py  test_pipeline.py  test_processors.py  test_producer_ops.py  test_spectral_analysis.py  test_traintest_producer.py
src/deepview_canvas/: .gitignore  README.md  package-lock.json  package.json  requirements.txt  tsconfig.json
src/deepview_canvas/canvas_ux/: .eslintrc.js  .gitignore  MANIFEST.in  README.md  _version.py  canvas_ux.json  install.json  package.json  setup.cfg  setup.py  tailwind.config.js  tsconfig.eslint.json  tsconfig.json  webpack.config.js
src/deepview_canvas/canvas_viz/: README.md  package.json  rollup.config.js  tailwind.config.js  tsconfig.json  vitest.config.ts
src/deepview_data/: README.md  pyproject.toml
src/deepview_datasets/: junit.xml  pyproject.toml
src/deepview_tensorflow/: README.md  junit.xml  pyproject.toml
src/deepview_tensorflow/deepview_tensorflow/: __init__.py  _custom_datasets.py  _sample_datasets.py  _sample_models.py
src/deepview_tensorflow/deepview_tensorflow/_tensorflow/: _tensorflow_file_loaders.py  _tensorflow_loading.py  _tensorflow_protocols.py  _tf1_file_loaders.py  _tf1_loading.py  _tf1_model.py  _tf2_file_loaders.py  _tf2_loading.py  _tf2_model.py
src/deepview_tensorflow/deepview_tensorflow/samples/: __init__.py  _simple_cnn_keras.py  _simple_lstm_tensorflow.py
src/deepview_tensorflow/tests/: junit.xml  test_custom_datasets.py  test_tensorflow_model.py  test_tf1_model_loaders.py  test_tf1_seq_model.py  test_tf2_model_loaders.py  test_tf_examples.py
src/deepview_torch/: README.md  pyproject.toml
tests/: test_visualizer.py
(+247 files in other folders)
